versioned_docs/version-4.1.x/reference/adtsession-object.mdx
---
sidebar_position: 1
sidebar_label: 'ADTSession Object'
title: 'ADTSession Object'
description: 'PSAppDeployToolkit uses ADTSession to govern each deployment. You can find more information here'
slug: /reference/adtsession-object
hide_title: true
tags:
  - ADTSession Object
  - Reference
---

## ADTSession Object

The `ADTSession` object is a core component of **PSAppDeployToolkit**, managing the state and information throughout a deployment session. It gathers essential details about the deployment environment and provides convenient properties and methods for use in scripts.

### Initialization

When you start a deployment script, initialize the `ADTSession` with the `Open-ADTSession` function:

```powershell
$adtSession = Open-ADTSession -AppName "YourAppName" -AppVersion "1.0.0" -AppVendor "YourVendor" -DeploymentType "Install" -PassThru
```

This initializes the session and gathers information about the deployment, user, and computer, providing an object with several helpful properties you can use.

In addition, opening a session creates additional variables in your PowerShell environment that are independent of any particular deployment. More information about these variables can be found in the [Variables](./variables.mdx) page.

## Properties

The ADTSession object exposes several properties, which can be accessed using `$adtSession.<PropertyName>`, e.g `$adtSession.AppName`.

The following properties are settable via parameters of the `Open-ADTSession` function:

### Deployment Properties

| Property       | Description                                                                            |
| :------------- | :------------------------------------------------------------------------------------- |
| `AppArch`      | The architecture (e.g., x86, x64) of the application.                                  |
| `AppLang`      | The language or locale of the application.                                             |
| `AppName`      | The name of the application being deployed.                                            |
| `AppRevision`  | The revision number of the application.                                                |
| `AppVendor`    | The vendor of the application.                                                         |
| `AppVersion`   | The version of the application.                                                        |
| `InstallName`  | The name assigned to the installation (overrides the automatically generated name).    |
| `InstallTitle` | The title displayed during installation (overrides the automatically generated title). |

### Script Properties

| Property                      | Description                                                              |
| :---------------------------- | :----------------------------------------------------------------------- |
| `AppScriptAuthor`             | The author of the deployment script.                                     |
| `AppScriptDate`               | The creation date of the deployment script.                              |
| `AppScriptVersion`            | The version of the deployment script.                                    |
| `DeployAppScriptFriendlyName` | The filename of the deployment script.                                   |
| `DeployAppScriptParameters`   | The parameters passed to the deployment script.                          |
| `DeployAppScriptVersion`      | The version of PSAppDeployToolkit the deployment script originated from. |

### Deployment Settings

| Property                         | Description                                                                                                                                               |
| :------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `AppRebootExitCodes`             | An array of exit codes that indicate a reboot is required after installation or uninstallation.                                                           |
| `AppSuccessExitCodes`            | An array of exit codes that indicate a successful installation or uninstallation.                                                                         |
| `AppProcessesToClose`            | An array of process names or hashtables (with Name/Description) to be closed before install/uninstall/repair.                                             |
| `DeploymentType`                 | Indicates if the deployment is an "Install", "Uninstall", or "Repair".                                                                                    |
| `DeployMode`                     | The mode in which the deployment is running (e.g., "Auto", "Interactive", "NonInteractive", "Silent").                                                    |
| `DefaultMsiFile`                 | The default MSI file used for installation if none is specified.                                                                                          |
| `DefaultMspFiles`                | The default MSP files used for installation if none are specified.                                                                                        |
| `DefaultMstFile`                 | The default MST file used for installation if none are specified.                                                                                         |
| `DisableDefaultMsiProcessList`   | Disables extraction of the default process list from the MSI.                                                                                             |
| `ForceMsiDetection`              | Force use of zero-config MSI detection even if the AppName is already set.                                                                                |
| `ForceWimDetection`              | Auto-mount a WIM image file if found in DirFiles.                                                                                                         |
| `NoOobeDetection`                | Bypasses OOBE detection logic when DeployMode is set to Auto. Use this to show the UI during OOBE / Autopilot ESP phases.                                 |
| `NoProcessDetection`             | Bypasses process detection logic when DeployMode is set to Auto. Use this to show the UI even if there are no processes to close.                         |
| `NoSessionDetection`             | Bypasses session detection logic when DeployMode is set to Auto. Use this to show the UI when no user is logged on and the SYSTEM process is interactive. |
| `RequireAdmin`                   | Whether the deployment requires administrative privileges.                                                                                                |
| `SuppressRebootPassThru`         | Indicates if reboot exit codes (e.g. 3010) should be converted to 0 (i.e. Success) when closing the session.                                              |
| `TerminalServerMode`             | Enables Terminal Server installation mode.                                                                                                                |

### Path Settings

| Property          | Description                                               |
| :---------------- | :-------------------------------------------------------- |
| `DirFiles`        | Path to the "Files" directory used by the toolkit.        |
| `DirSupportFiles` | Path to the "SupportFiles" directory used by the toolkit. |
| `ScriptDirectory` | The directory where the deployment script is located.     |

### Logging Settings

| Property         | Description               |
| :--------------- | :------------------------ |
| `DisableLogging` | Disable logging.          |
| `LogName`        | The name of the log file. |

### Additional Properties

The following properties are not parameters of `Open-ADTSession`, but are available as additional properties of the returned `ADTSession` object:

| Property          | Description                                                                                                    |
| :---------------- | :------------------------------------------------------------------------------------------------------------- |
| `CurrentDate`     | The current date.                                                                                              |
| `CurrentDateTime` | The current date and time.                                                                                     |
| `CurrentTime`     | The current time.                                                                                              |
| `InstallPhase`    | The current phase of the installation process (e.g., "Pre-Installation", "Installation", "Post-Installation"). |
| `LogPath`         | The path used for logging.                                                                                     |
| `UseDefaultMsi`   | Indicates whether the toolkit is running in zero-config mode.                                                  |

### Additional Methods

The following methods can also be run on the `ADTSession` object:

| Method               | Description                                                       |
| :------------------- | :---------------------------------------------------------------- |
| `GetDeferHistory`    | Returns the defer history.                                        |
| `GetDeploymentStatus | Returns the current deployment status.                            |
| `GetExitCode`        | Returns the current exit code.                                    |
| `GetLogBuffer`       | Returns the entire log buffer.                                    |
| `IsClosed`           | Indicates whether the session is closed.                          |
| `IsNonInteractive`   | Indicates whether the session is running in non-interactive mode. |
| `IsSilent`           | Indicates whether the session is running in silent mode.          |
| `ResetDeferHistory`  | Resets the defer history.                                         |
| `SetDeferHistory`    | Sets the defer history.                                           |
| `SetExitCode`        | Sets the exit code.                                               |
| `WriteLogEntry`      | Writes an entry to the log.                                       |
